--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,12 +1,24 @@
 <h1>Create an article</h1>
 
+<% if @article.errors.any? %>
+<h2>The follwoing errors prevented the article from being saved </h2>
+  <ul>
+    <% @article.errors.full_messages.each do |msg| %>
+    <li><% msg %></li>
+  
+    <% end %>
+  </ul>
+<% end %>
+  
+  
+
 <%= form_for @article do |f| %>
   <p>
     <%= f.label :title %> <br/>
     <%= f.text_field :title %>
   </p>
   <p>
-    <%= f.label :desription %> <br/>
+    <%= f.label :description %> <br/>
     <%= f.text_area :description %>
   </p>
   
