--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,4 +2,5 @@
 
 <%= link_to "About", about_path %>
 <p></p>
-<%= link_to "Articles", articles_path %>
+<%= link_to "Articles New", new_path %>
+<p></p>
