added image nd footer

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,20 +1,8 @@
-<head>
-<style>
-.button {background-color: #4CAF50;} /* Green */
-.button2 {background-color: #008CBA;} /* Blue */
-.button3 {background-color: #f44336;} /* Red */ 
-.button4 {background-color: #e7e7e7; color: black;} /* Gray */ 
-.button5 {background-color: #555555;} /* Black */
+<div class="center jumbotron">
+  <h1> ALPHA BLOG</h1>
 
-.one:link {color:#ff0000;}
-.one:visited {color:#0000ff;}
-.one:hover {color:#aaaaaa;}
 
-</style>
-</head>
 
-<h1>This is my home page</h1>
+<%= link_to "Sign up now", "#", class: "btn btn-danger btn-lrg btn-xlarge" %> | 
 
-<%= link_to "About", about_path %> | 
-<buttton class="button4"> <%= link_to "Alpha blog", articles_path %> </buttton>
-<p></p>
+</div>
