--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/errors', obj: @article %>
 
   <div class= 'row'>
-    <div class= 'col-md-12'>
+    <div class= 'col-xs-12'>
 
     <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
     <div class= "form-group">
@@ -22,7 +22,7 @@
       </div>
       <div class="form-grouP">
         <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit class: "btn btn-primary btn-lrg" %>
+        <%= f.submit class: "btn btn-primary btn-lg" %>
         </div>
       </div>
     <% end %>
