--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <footer class="footer">
     <small>
-      Copyright &copy; <a href="https://www.udemy.com">The complete Ruby on Rails Developer</a>
-      by <a href="http://www.mashrurhossain.com/">Mashrur Hossain</a>
+      Copyright © <a href="enter in a link here">The Complete Ruby on Rails Developer</a>
+      by <a href="enter in a link here">Mashrur Hossain</a>
     </small>
     <nav>
       <ul>
-        <li> <%= link_to "About", about_path %></li>
+        <li><%= link_to "About", about_path %></li>
       </ul>
     </nav>
   </footer>
