cretae Users table

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,6 @@
 
 
 
-<%= link_to "Sign up now", "#", class: "btn btn-danger btn-lrg btn-xlarge" %> | 
+<%= link_to "Sign up now", "#", class: "btn btn-success btn-lrg btn-xlarge" %> | 
 
 </div>
