--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -22,7 +22,7 @@
       </div>
       <div class="form-grouP">
         <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit class: "btn btn-primary btn-lg" %>
+        <%= f.submit class: "btn btn-primary btn-xs" %>
         </div>
       </div>
     <% end %>
